tests/types/errors/function_arg_type_mismatch.expr
function add(i32 a, i32 b) -> i32 {
    return a + b;
}

i32 result = add("1", 2);
